model is performing worse...

--- a/Code/main/mpquic-rl/analysis.ipynb
+++ b/Code/main/mpquic-rl/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -24,14 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
-      "text/plain": "      Unnamed: 0  segment_nr     bandwidth   bitrate  down_shifts   \n0              0           0  1.502067e+03    247444            0  \\\n1              1           1  3.480544e+05    247444            0   \n2              2           2  4.572414e+05    247444            0   \n3              3           3  3.391279e+05    247444            0   \n4              4           4  4.979970e+05    494206            0   \n...          ...         ...           ...       ...          ...   \n5904         223         223  1.370864e+06  10063789            0   \n5905         224         224  1.411747e+06  15144115            0   \n5906         225         225  1.530646e+06  15144115            0   \n5907         226         226  1.471640e+06  15144115            0   \n5908         227         227  1.475604e+06  15144115            0   \n\n      buffering_ratio  initial_buffering  stall_count  stall_sum       qoe   \n0                 0.0           0.785746            0        0.0  0.239470  \\\n1                 0.0           0.000000            0        0.0  0.239470   \n2                 0.0           0.000000            0        0.0  0.239470   \n3                 0.0           0.000000            0        0.0  0.239470   \n4                 0.0           0.000000            0        0.0  0.220483   \n...               ...                ...          ...        ...       ...   \n5904              0.0           0.000000            0        0.0  2.140199   \n5905              0.0           0.000000            0        0.0  2.145141   \n5906              0.0           0.000000            0        0.0  2.150059   \n5907              0.0           0.000000            0        0.0  2.154955   \n5908              0.0           0.000000            0        0.0  2.159827   \n\n     trace   model  \n0        0    lstm  \n1        0    lstm  \n2        0    lstm  \n3        0    lstm  \n4        0    lstm  \n...    ...     ...  \n5904     9  minrtt  \n5905     9  minrtt  \n5906     9  minrtt  \n5907     9  minrtt  \n5908     9  minrtt  \n\n[5909 rows x 12 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>segment_nr</th>\n      <th>bandwidth</th>\n      <th>bitrate</th>\n      <th>down_shifts</th>\n      <th>buffering_ratio</th>\n      <th>initial_buffering</th>\n      <th>stall_count</th>\n      <th>stall_sum</th>\n      <th>qoe</th>\n      <th>trace</th>\n      <th>model</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>0</td>\n      <td>1.502067e+03</td>\n      <td>247444</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.785746</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.239470</td>\n      <td>0</td>\n      <td>lstm</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>1</td>\n      <td>3.480544e+05</td>\n      <td>247444</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.239470</td>\n      <td>0</td>\n      <td>lstm</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>2</td>\n      <td>4.572414e+05</td>\n      <td>247444</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.239470</td>\n      <td>0</td>\n      <td>lstm</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>3</td>\n      <td>3.391279e+05</td>\n      <td>247444</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.239470</td>\n      <td>0</td>\n      <td>lstm</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>4</td>\n      <td>4.979970e+05</td>\n      <td>494206</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.220483</td>\n      <td>0</td>\n      <td>lstm</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>5904</th>\n      <td>223</td>\n      <td>223</td>\n      <td>1.370864e+06</td>\n      <td>10063789</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>2.140199</td>\n      <td>9</td>\n      <td>minrtt</td>\n    </tr>\n    <tr>\n      <th>5905</th>\n      <td>224</td>\n      <td>224</td>\n      <td>1.411747e+06</td>\n      <td>15144115</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>2.145141</td>\n      <td>9</td>\n      <td>minrtt</td>\n    </tr>\n    <tr>\n      <th>5906</th>\n      <td>225</td>\n      <td>225</td>\n      <td>1.530646e+06</td>\n      <td>15144115</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>2.150059</td>\n      <td>9</td>\n      <td>minrtt</td>\n    </tr>\n    <tr>\n      <th>5907</th>\n      <td>226</td>\n      <td>226</td>\n      <td>1.471640e+06</td>\n      <td>15144115</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>2.154955</td>\n      <td>9</td>\n      <td>minrtt</td>\n    </tr>\n    <tr>\n      <th>5908</th>\n      <td>227</td>\n      <td>227</td>\n      <td>1.475604e+06</td>\n      <td>15144115</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>2.159827</td>\n      <td>9</td>\n      <td>minrtt</td>\n    </tr>\n  </tbody>\n</table>\n<p>5909 rows × 12 columns</p>\n</div>"
+      "text/plain": "      Unnamed: 0  segment_nr     bandwidth   bitrate  down_shifts   \n0              0           0  1.502067e+03    247444            0  \\\n1              1           1  3.480544e+05    247444            0   \n2              2           2  4.572414e+05    247444            0   \n3              3           3  3.391279e+05    247444            0   \n4              4           4  4.979970e+05    494206            0   \n...          ...         ...           ...       ...          ...   \n5975         294         294  8.894393e+05  10063789            2   \n5976         295         295  9.546713e+05  15144115            0   \n5977         296         296  1.134642e+06  15144115            0   \n5978         297         297  1.054793e+06  15144115            0   \n5979         298         298  1.014503e+06  15144115            0   \n\n      buffering_ratio  initial_buffering  stall_count  stall_sum       qoe   \n0            0.000000           0.785746            0   0.000000  0.239470  \\\n1            0.000000           0.000000            0   0.000000  0.239470   \n2            0.000000           0.000000            0   0.000000  0.239470   \n3            0.000000           0.000000            0   0.000000  0.239470   \n4            0.000000           0.000000            0   0.000000  0.220483   \n...               ...                ...          ...        ...       ...   \n5975         0.029341           0.000000            6  17.295762  0.000000   \n5976         0.029271           0.000000            6  17.295762  0.000000   \n5977         0.029209           0.000000            6  17.295762  0.000000   \n5978         0.029139           0.000000            6  17.295762  0.000000   \n5979         0.029094           0.000000            6  17.295762  0.000000   \n\n      trace   model  \n0         0    lstm  \n1         0    lstm  \n2         0    lstm  \n3         0    lstm  \n4         0    lstm  \n...     ...     ...  \n5975      9  minrtt  \n5976      9  minrtt  \n5977      9  minrtt  \n5978      9  minrtt  \n5979      9  minrtt  \n\n[5980 rows x 12 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>segment_nr</th>\n      <th>bandwidth</th>\n      <th>bitrate</th>\n      <th>down_shifts</th>\n      <th>buffering_ratio</th>\n      <th>initial_buffering</th>\n      <th>stall_count</th>\n      <th>stall_sum</th>\n      <th>qoe</th>\n      <th>trace</th>\n      <th>model</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>0</td>\n      <td>1.502067e+03</td>\n      <td>247444</td>\n      <td>0</td>\n      <td>0.000000</td>\n      <td>0.785746</td>\n      <td>0</td>\n      <td>0.000000</td>\n      <td>0.239470</td>\n      <td>0</td>\n      <td>lstm</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>1</td>\n      <td>3.480544e+05</td>\n      <td>247444</td>\n      <td>0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0</td>\n      <td>0.000000</td>\n      <td>0.239470</td>\n      <td>0</td>\n      <td>lstm</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>2</td>\n      <td>4.572414e+05</td>\n      <td>247444</td>\n      <td>0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0</td>\n      <td>0.000000</td>\n      <td>0.239470</td>\n      <td>0</td>\n      <td>lstm</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>3</td>\n      <td>3.391279e+05</td>\n      <td>247444</td>\n      <td>0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0</td>\n      <td>0.000000</td>\n      <td>0.239470</td>\n      <td>0</td>\n      <td>lstm</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>4</td>\n      <td>4.979970e+05</td>\n      <td>494206</td>\n      <td>0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0</td>\n      <td>0.000000</td>\n      <td>0.220483</td>\n      <td>0</td>\n      <td>lstm</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>5975</th>\n      <td>294</td>\n      <td>294</td>\n      <td>8.894393e+05</td>\n      <td>10063789</td>\n      <td>2</td>\n      <td>0.029341</td>\n      <td>0.000000</td>\n      <td>6</td>\n      <td>17.295762</td>\n      <td>0.000000</td>\n      <td>9</td>\n      <td>minrtt</td>\n    </tr>\n    <tr>\n      <th>5976</th>\n      <td>295</td>\n      <td>295</td>\n      <td>9.546713e+05</td>\n      <td>15144115</td>\n      <td>0</td>\n      <td>0.029271</td>\n      <td>0.000000</td>\n      <td>6</td>\n      <td>17.295762</td>\n      <td>0.000000</td>\n      <td>9</td>\n      <td>minrtt</td>\n    </tr>\n    <tr>\n      <th>5977</th>\n      <td>296</td>\n      <td>296</td>\n      <td>1.134642e+06</td>\n      <td>15144115</td>\n      <td>0</td>\n      <td>0.029209</td>\n      <td>0.000000</td>\n      <td>6</td>\n      <td>17.295762</td>\n      <td>0.000000</td>\n      <td>9</td>\n      <td>minrtt</td>\n    </tr>\n    <tr>\n      <th>5978</th>\n      <td>297</td>\n      <td>297</td>\n      <td>1.054793e+06</td>\n      <td>15144115</td>\n      <td>0</td>\n      <td>0.029139</td>\n      <td>0.000000</td>\n      <td>6</td>\n      <td>17.295762</td>\n      <td>0.000000</td>\n      <td>9</td>\n      <td>minrtt</td>\n    </tr>\n    <tr>\n      <th>5979</th>\n      <td>298</td>\n      <td>298</td>\n      <td>1.014503e+06</td>\n      <td>15144115</td>\n      <td>0</td>\n      <td>0.029094</td>\n      <td>0.000000</td>\n      <td>6</td>\n      <td>17.295762</td>\n      <td>0.000000</td>\n      <td>9</td>\n      <td>minrtt</td>\n    </tr>\n  </tbody>\n</table>\n<p>5980 rows × 12 columns</p>\n</div>"
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
     "                df = pd.read_csv(os.path.join(dir_path, file),\n",
     "                                 )#names=[\"bwd_path0\",\"bwd_path1\",\"srtt_path0\",\"srtt_path1\",\"loss_path0\",\"loss_path1\"]\n",
     "                #print(file)\n",
-    "                df['trace'] = file.split(\"_\")[0]\n",
+    "                df['trace'] = int(file.split(\"_\")[0])\n",
     "                df['model'] = paths[-2].split(\"_\")[-2]\n",
     "                #based on subdirectory, is the download a video or a file\n",
     "                #df['download_type'] = paths[2]\n",
@@ -59,11 +59,14 @@
     "    #\n",
     "                #df['TraceID'] = len(all_files) #each file is a separate trace\n",
     "                all_files.append(df)\n",
-    "runs = [\"central_service/runs/20230528_11_22_27_LSTM_test/\", 'central_service/runs/20230527_00_51_39_minrtt_test/']\n",
+    "old_lstm = \"central_service/runs/20230528_11_22_27_LSTM_test/\"\n",
+    "new_lstm = \"central_service/runs/20230529_10_15_43_LSTM_test/\"\n",
+    "min_rtt = 'central_service/runs/20230529_11_01_43_minrtt_test/'\n",
+    "runs = [old_lstm, min_rtt]\n",
     "for r in runs:\n",
     "    read(r)\n",
     "df_runs = pd.concat(all_files, ignore_index=True)\n",
-    "df_runs"
+    "#df_runs"
    ],
    "metadata": {
     "collapsed": false
@@ -71,23 +74,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
-      "text/plain": "             bitrate\nmodel               \nlstm    9.850757e+06\nminrtt  1.082059e+07",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>bitrate</th>\n    </tr>\n    <tr>\n      <th>model</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>lstm</th>\n      <td>9.850757e+06</td>\n    </tr>\n    <tr>\n      <th>minrtt</th>\n      <td>1.082059e+07</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "           bandwidth\nmodel               \nlstm    1.231275e+06\nminrtt  1.362968e+06",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>bandwidth</th>\n    </tr>\n    <tr>\n      <th>model</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>lstm</th>\n      <td>1.231275e+06</td>\n    </tr>\n    <tr>\n      <th>minrtt</th>\n      <td>1.362968e+06</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 66,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "#df_runs = df_runs[df_runs['trace']!='9']\n",
-    "df_runs.groupby(['trace', 'model']).agg({'stall_sum':'max'})\n",
-    "df_runs.groupby(['model']).agg({'bitrate':'mean'})\n",
+    "#df_runs = df_runs[df_runs['trace']<4]\n",
+    "#df_runs.groupby(['trace', 'model']).agg({'qoe':'last'})\n",
+    "df_runs.groupby(['model']).agg({'bandwidth':'mean'})\n",
     "#df_runs.groupby(['trace', 'model']).agg({'bwd_path0':'mean'})"
    ],
    "metadata": {
