last try to improve model, didnt do anything

--- a/Code/main/mpquic-rl/analysis.ipynb
+++ b/Code/main/mpquic-rl/analysis.ipynb
@@ -3,9 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -20,7 +17,10 @@
     "\n",
     "%matplotlib inline\n",
     "plt.style.use('bmh')"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -74,14 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
-      "text/plain": "           bandwidth\nmodel               \nlstm    1.231275e+06\nminrtt  1.362968e+06",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>bandwidth</th>\n    </tr>\n    <tr>\n      <th>model</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>lstm</th>\n      <td>1.231275e+06</td>\n    </tr>\n    <tr>\n      <th>minrtt</th>\n      <td>1.362968e+06</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                   qoe\ntrace model           \n0     lstm    1.411736\n      minrtt  1.567405\n1     lstm    1.912682\n      minrtt  2.046571\n2     lstm    1.730079\n      minrtt  1.952247\n3     lstm    1.709164\n      minrtt  1.939510\n4     lstm    1.710323\n      minrtt  1.818789\n5     lstm    1.464233\n      minrtt  1.653400\n6     lstm    1.166311\n      minrtt  1.752299\n7     lstm    1.829137\n      minrtt  1.858116\n8     lstm    1.731754\n      minrtt  1.854451\n9     lstm    1.035667\n      minrtt  0.000000",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>qoe</th>\n    </tr>\n    <tr>\n      <th>trace</th>\n      <th>model</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">0</th>\n      <th>lstm</th>\n      <td>1.411736</td>\n    </tr>\n    <tr>\n      <th>minrtt</th>\n      <td>1.567405</td>\n    </tr>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">1</th>\n      <th>lstm</th>\n      <td>1.912682</td>\n    </tr>\n    <tr>\n      <th>minrtt</th>\n      <td>2.046571</td>\n    </tr>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">2</th>\n      <th>lstm</th>\n      <td>1.730079</td>\n    </tr>\n    <tr>\n      <th>minrtt</th>\n      <td>1.952247</td>\n    </tr>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">3</th>\n      <th>lstm</th>\n      <td>1.709164</td>\n    </tr>\n    <tr>\n      <th>minrtt</th>\n      <td>1.939510</td>\n    </tr>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">4</th>\n      <th>lstm</th>\n      <td>1.710323</td>\n    </tr>\n    <tr>\n      <th>minrtt</th>\n      <td>1.818789</td>\n    </tr>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">5</th>\n      <th>lstm</th>\n      <td>1.464233</td>\n    </tr>\n    <tr>\n      <th>minrtt</th>\n      <td>1.653400</td>\n    </tr>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">6</th>\n      <th>lstm</th>\n      <td>1.166311</td>\n    </tr>\n    <tr>\n      <th>minrtt</th>\n      <td>1.752299</td>\n    </tr>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">7</th>\n      <th>lstm</th>\n      <td>1.829137</td>\n    </tr>\n    <tr>\n      <th>minrtt</th>\n      <td>1.858116</td>\n    </tr>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">8</th>\n      <th>lstm</th>\n      <td>1.731754</td>\n    </tr>\n    <tr>\n      <th>minrtt</th>\n      <td>1.854451</td>\n    </tr>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">9</th>\n      <th>lstm</th>\n      <td>1.035667</td>\n    </tr>\n    <tr>\n      <th>minrtt</th>\n      <td>0.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,8 +89,8 @@
    "source": [
     "\n",
     "#df_runs = df_runs[df_runs['trace']<4]\n",
-    "#df_runs.groupby(['trace', 'model']).agg({'qoe':'last'})\n",
-    "df_runs.groupby(['model']).agg({'bandwidth':'mean'})\n",
+    "df_runs.groupby(['trace', 'model']).agg({'qoe':'last'})\n",
+    "#df_runs.groupby(['model']).agg({'bandwidth':'mean'})\n",
     "#df_runs.groupby(['trace', 'model']).agg({'bwd_path0':'mean'})"
    ],
    "metadata": {
