--- a/Code/main/mpquic-rl/analysis.ipynb
+++ b/Code/main/mpquic-rl/analysis.ipynb
@@ -62,7 +62,8 @@
     "old_lstm = \"central_service/runs/20230528_11_22_27_LSTM_test/\"\n",
     "new_lstm = \"central_service/runs/20230529_10_15_43_LSTM_test/\"\n",
     "min_rtt = 'central_service/runs/20230529_11_01_43_minrtt_test/'\n",
-    "runs = [old_lstm, min_rtt]\n",
+    "a2c = \"central_service/runs/20230530_00_45_43_a2c_test/\"\n",
+    "runs = [old_lstm, min_rtt, a2c]\n",
     "for r in runs:\n",
     "    read(r)\n",
     "df_runs = pd.concat(all_files, ignore_index=True)\n",
